--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <h2>Small Pizza</h2>
         <img src="images/pizza-one.png" alt="" width="125">
         <h3>R49.00</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta repudiandae dolores repellendus harum esse. Perspiciatis, earum recusandae error eos enim voluptate reprehenderit, illum, alias voluptates autem repellendus ullam commodi excepturi tempore cum animi! Accusantium sint rerum autem, error quis obcaecati?</p>
+        <p>Chicken, mushroom, sweet bell pepper, onion, Tikka sauce, spring onion</p>
     </div>
     <div class="pizza medium_pizza">
         <h2>Medium Pizza</h2>
         <img src="images/pizza-two.png" alt="" width="150">
         <h3>R89.00</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ex non, qui fuga nemo tempora delectus enim quae? Deleniti fuga velit laudantium sit, perferendis rerum, at nostrum magni aperiam eveniet cum tenetur, numquam saepe maiores facilis vel a ex officiis!</p>
+        <p>Ground beef, green chilli, green pepper, onion, Mexican sauce</p>
     </div>
     <div class="pizza large_pizza">
         <h2>Large Pizza</h2>
         <img src="images/pizza-three.png" alt="" width="175">
         <h3>R129.00</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aperiam esse qui voluptatum aliquam quia architecto, vitae atque deserunt rem aliquid blanditiis. Debitis dicta illum corrupti velit similique molestias illo, inventore eos quo natus! Earum beatae at velit nihil itaque.</p>
+        <p>Chicken, green pepper, pineapple, sweet & sour sauce</p>
     </div>
     </div>
     <div class="pizza contact_us">
